public class Reproductor {
    private Integer volumen;
    private String estado;
}